--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </block>
   </category>
 </xml>
+<script>
 Blockly.inject('blockly-div', {
   media: '../../../media/',
   toolbox: document.getElementById('toolbox'),
@@ -17,3 +18,4 @@ Blockly.inject('blockly-div', {
   horizontalLayout: true,
   scrollbars: false
 });
+</script>
