--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <p>
-    <button onclick="showCode()">Show JavaScript</button>
+    <button onclick="showCode()">Show JavaScript Code</button>
     <button onclick="runCode()">Run JavaScript</button>
   </p>
 
