--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
 
   <div id="blocklyDiv" style="height: 600px; width: 1000px;"></div>
 
-  <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox" style="display: none">
+
+<xml id="toolbox" style="display: none">
+  <category name="Loops" colour="120">
+    <block type="controls_repeat_ext">
+      <value name="TIMES">
+        <shadow type="math_number">
+          <field name="NUM">5</field>
+        </shadow>
+      </value>
+    </block>
+  </category>
+</xml>
     <category name="Logic" colour="%{BKY_LOGIC_HUE}">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
