--- a/index.html
+++ b/index.html
@@ -29,16 +29,11 @@
 
 
 <xml id="toolbox" style="display: none">
-  <category name="Loops" colour="120">
-    <block type="controls_repeat_ext">
-      <value name="TIMES">
-        <shadow type="math_number">
-          <field name="NUM">5</field>
-        </shadow>
-      </value>
-    </block>
+  <category name="Javascript" colour="120">
+  <block type="block_type">
+    <field name="field_abc"></field>
+  </block>
   </category>
-</xml>
     <category name="Logic" colour="%{BKY_LOGIC_HUE}">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
