--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
     </category>
   </xml>
 
-  <xml xmlns="https://developers.google.com/blockly/xml" id="startBlocks" style="display: none">
-  
-  </xml>
+<xml xmlns="https://developers.google.com/blockly/xml" id="startBlocks" style="display: none">
+  <block type="block_type" id="ErVES]NiGD.#ZfUJw0*8" x="263" y="88">
+    <field name="field_abc"></field>
+  </block>
+</xml>
 
   <script>
     var demoWorkspace = Blockly.inject('blocklyDiv',
