--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   </style>
 </head>
 <body>
-  <img src="blockly.png" , alt="blockly">
   <p>
     <button onclick="showCode()">Show JavaScript Code</button>
     <button onclick="runCode()">Run JavaScript</button>
@@ -29,7 +28,7 @@
 
 
 <xml id="toolbox" style="display: none">
-  <category name="Javascript" colour="120">
+  <category name="Loop" colour="120">
   <block type="block_type">
     <field name="field_abc"></field>
   </block>
@@ -99,6 +98,6 @@
       }
     }
   </script>
-
+  <img src="blockly.png" , alt="blockly">
 </body>
 </html>
