--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CLICK HTML ONLINE EDITOR</title>
+  <title>JAVASCRIPT EDITOR - CLICK HTML ONLINE EDITOR</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../javascript_compressed.js"></script>
