--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>JAVASCRIPT EDITOR - CLICK HTML ONLINE EDITOR</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../javascript_compressed.js"></script>
@@ -19,12 +24,38 @@
   </style>
 </head>
 <body>
-  <p>
-    <button onclick="showCode()">Show JavaScript Code</button>
-    <button onclick="runCode()">Run JavaScript</button>
-  </p>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <a class="navbar-brand" href="#"><img src="https://clickhtml.kro.kr/assets/img/icon/logo.png">   <img src="blockly.png" alt="blockly" height="23px"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  <div id="blocklyDiv" style="height: 600px; width: 1000px;"></div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+          <strong>
+        <a class="nav-link" href="#">Block Coding <span class="sr-only">(current)</span></a>
+          </strong>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          파일
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" onclick='showCode()'>JS로 내보내기</a>
+        </div>
+      </li>
+    
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+                      <button class="btn btn-outline-warning my-2 my-sm-0" onclick="runCode()">실행</button>
+              <button class="btn btn-outline-light my-2 my-sm-0" type="submit" href="http://clickhtml.kro.kr/ide.html">IDE로 돌아가기</button>
+
+
+    </form>
+  </div>
+</nav>
+ <div id="blocklyDiv" style="height: 100%; width: 100%;"></div>
 
 
 <xml id="toolbox" style="display: none">
@@ -98,6 +129,6 @@
       }
     }
   </script>
-  <img src="blockly.png" , alt="blockly">
+
 </body>
 </html>
